Signed-off-by: cy <1435849354@qq.com>

--- a/WebContent/Register.html
+++ b/WebContent/Register.html
@@ -3,14 +3,6 @@
 <head>
 <meta charset="UTF-8">
 <title>用户注册</title>
-<script>
-	function r()
-	{
-		var username = document.getElementById("username");
-		var pass = document.getElementById("password");
-		return true;
-	}
-</script>
 </head>
 <body>
 <form action = "Register" method = "post">
@@ -24,7 +16,7 @@
 				<td><input type="password" id="pass" name="pass" /></td>
 			</tr>
 			<tr>
-				<td colspan=2><input type="reset" /> <input type="submit" value = "提交"  function r();/></td>
+				<td colspan=2><input type="reset" /> <input type="submit" value = "提交"  /></td>
 			</tr>
 		</table>
 	</form>
