Signed-off-by: cy <1435849354@qq.com>

--- a/WebContent/login.html
+++ b/WebContent/login.html
@@ -23,12 +23,12 @@
 		<table>
 			<tr>
 			<td><label for "txtname">帐号：</label></td>
-			<td><input type = "text" id = "username" name = "username"/></td>
+			<td><input type = "text" id = "no" name = "no"/></td>
 			</tr>
 			
 			<tr>
 			<td><label for "txtpwd">密码：</label></td>
-			<td><input type = "password" id = "pass" name = "pass"/></td>
+			<td><input type = "password" id = "pwd" name = "pwd"/></td>
 			</tr>
 			
 			<tr>
