--- a/WebContent/Register.html
+++ b/WebContent/Register.html
@@ -9,11 +9,11 @@
 		<table>
 			<tr>
 				<td><label for="txtname">账号：</label></td>
-				<td><input type="text" id="username" name="username" /></td>
+				<td><input type="text" id="no" name="no" /></td>
 			</tr>
 			<tr>
 				<td><label for="txtpswd">密码：</label></td>
-				<td><input type="password" id="pass" name="pass" /></td>
+				<td><input type="password" id="pwd" name="pwd" /></td>
 			</tr>
 			<tr>
 				<td colspan=2><input type="reset" /> <input type="submit" value = "提交"  /></td>
